# pytest-training

./: pyproject.toml
app/: main.py
tests/: test_main.py
